# matter-compiler

./: AGENTS.md  Cargo.toml  GAP_ANALYSIS.md  README.md
crates/compiler/: Cargo.toml
crates/compiler/src/: artifact.rs  lib.rs  pipeline.rs  spinner_geometry.rs
crates/compiler/tests/: prototype_failures.rs  prototype_pipeline.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/design-sdk/: Cargo.toml
crates/design-sdk/examples/: fidget_spinner.rs
crates/design-sdk/src/: lib.rs
crates/design-sdk/tests/: fidget_spinner_example.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/manufacturing-context/: Cargo.toml
crates/manufacturing-context/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: fidget_spinner.rs
crates/sdk/src/: lib.rs
crates/sdk/tests/: fidget_spinner_example.rs
examples/fidget_spinner/: Cargo.toml  README.md
examples/fidget_spinner/src/: lib.rs  main.rs
examples/fidget_spinner/tests/: fidget_spinner_example.rs
