[workspace]
resolver = "2"
members = [
    "crates/compiler",
    "crates/context",
    "crates/ir",
    "crates/sdk",
    "examples/fidget_spinner",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Turning intent into manufacturable reality"
readme = "README.md"
repository = "https://github.com/itpetey/matter-compiler"
license = "MPL-2.0"
