[package]
name = "matter-compiler"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
matter-context = { path = "../context" }
matter-ir = { path = "../ir", version = "0.1.0" }
matter-sdk = { path = "../sdk", version = "0.1.0" }

[dev-dependencies]
fidget-spinner = { path = "../../examples/fidget_spinner", version = "0.1.0" }
